corazones "listo"v2